# aliuahma

./: CNAME  Cargo.toml  Dockerfile  README.md  bio.html  blog.html  fly.toml  index.html  notes.html  notes.txt  site.webmanifest  vercel.json
api/: handler.rs
assets/css/: styles.css
blog/: 20250404.html  20250405.html  20250426.html  20250810.html  20250814.html  new-post-template.html  simple-template.html  template.html
includes/: header.html
notes/: 04052025.html  20250405.html  20250426.html
src/: error.rs  main.rs
src/handlers/: contact.rs  education.rs  home.rs  mod.rs
templates/: base.html  contact.html  education.html  home.html
