[package]
name = "aliuahma"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.6.2", features = ["fs"] }
tera = "1.20.0"
serde = { version = "1.0.217", features = ["derive"] }
thiserror = "2.0.9"
anyhow = "1.0.95"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
vercel_runtime = "1.1.4"
serde_json = "1.0.135"

[[bin]]
name = "handler"
path = "api/handler.rs"